<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.slate.weatherapp.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/weather_desc"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/weather"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="281dp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/pressure"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="281dp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="281dp" />

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/share_friend" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
